progress towards transferability analysis, need to figure out workaround for 10 vs 1000 size classifiers

--- a/tf_normal_adv_samples/resnet_samples.ipynb
+++ b/tf_normal_adv_samples/resnet_samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12819,7 +12819,7 @@
    ],
    "source": [
     "# imagenette has classes {tench, English springer, cassette player, chain saw, church, French horn, garbage truck, gas pump, golf ball, parachute}\n",
-    "generate_sample_set(\"imagenette2\\\\imagenette2\\\\train\")"
+    "generate_sample_set(\"..\\\\imagenette2\\\\imagenette2\\\\train\")"
    ]
   }
  ],
