--- a/torch_normal_adv_samples/resnet_samples.ipynb
+++ b/torch_normal_adv_samples/resnet_samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "import matplotlib.pyplot as plt \n",
     "import cv2\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import torch.nn as nn\n",
+    "import pickle"
    ]
   },
   {
