found perturbations forcing early exit and calculated resulting classification percentages per class

--- a/normal_adv_to_ee/main.ipynb
+++ b/normal_adv_to_ee/main.ipynb
@@ -3118,12 +3118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_adversaries(model, baseImage, delta, classIdx, steps=50, epsilon=0.005):\n",
-    "    for step in range(steps):\n",
+    "def generate_adversaries(model, baseImage, delta, steps=50, epsilon=0.005, target=0.75):\n",
+    "    for _ in range(steps):\n",
     "        # watch gradients\n",
     "        baseImage.requires_grad = True\n",
     "        delta.requires_grad = True\n",
@@ -3133,27 +3133,15 @@
     "        \n",
     "        # run perturbed image through the model and calculate the loss\n",
     "        predictions = model(adversary)\n",
-    "        print(predictions)\n",
-    "        # if step % 5 == 0:\n",
-    "        #     print(\"Step: {}, Pred: {}..., Confidence: {}\".format(step, torch.argmax(predictions, 1).item(), torch.softmax(predictions, dim=1)[0][torch.argmax(predictions, 1).item()].item() * 100))\n",
-    "        # loss = torch.nn.CrossEntropyLoss()(predictions, torch.tensor([classIdx]).to(device))\n",
     "        # print(predictions)\n",
-    "            \n",
-    "        # loss_classification = torch.nn.CrossEntropyLoss()(predictions, torch.tensor([classIdx]).to(device))\n",
-    "        # print(loss_classification)\n",
     "        \n",
-    "        # Calculate regularization term to move output towards target_value\n",
-    "        deviation = predictions - .75\n",
+    "        # calculate regularization term to move output towards target_value\n",
+    "        deviation = predictions - target\n",
     "        # print(deviation)\n",
     "        sign = torch.sign(deviation)\n",
-    "        loss_regularization = torch.abs(deviation) * sign  # Penalize deviation from target_value\n",
+    "        loss_regularization = torch.abs(deviation) * sign\n",
     "        \n",
-    "        # Total loss\n",
     "        loss = 0.1 * loss_regularization.mean()\n",
-    "        \n",
-    "        # log loss\n",
-    "        if step % 5 == 0:\n",
-    "            print(\"Step: {}, Loss: {}...\".format(step, loss.item()))\n",
     "        \n",
     "        # calculate gradients of loss with respect to perturbation\n",
     "        model.zero_grad()\n",
@@ -3171,18 +3159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = Image.open(\"..\\\\torch_normal_adv_samples\\\\results_transfer\\\\outputs\\\\n01440764\\\\ILSVRC2012_val_00007197.JPEG\")\n",
+    "image = Image.open(\"..\\\\torch_normal_adv_samples\\\\results_transfer\\\\inputs\\\\n01440764\\\\ILSVRC2012_val_00007197.JPEG\")\n",
     "image = transform(image)\n",
     "image = image.unsqueeze(0).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -3191,7 +3179,7 @@
        "torch.Size([1, 3, 224, 224])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3202,37 +3190,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.2870]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "Step: 0, Loss: -0.10369708389043808...\n",
-      "tensor([[0.5040]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.5813]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6231]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6442]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6571]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "Step: 5, Loss: -0.009287172928452492...\n",
-      "tensor([[0.6634]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6673]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6708]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6728]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6741]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "Step: 10, Loss: -0.007589865010231733...\n",
-      "tensor([[0.6756]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6769]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6774]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6779]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6789]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "Step: 15, Loss: -0.007113260217010975...\n",
-      "tensor([[0.6794]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6794]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6802]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.6805]], device='cuda:0', grad_fn=<AddmmBackward0>)\n"
+      "tensor([[-0.3099]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.4855]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.5618]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6011]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6230]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6359]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6425]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6470]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6496]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6522]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6536]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6550]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6560]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6570]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6575]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6583]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6585]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6593]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6594]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
+      "tensor([[0.6597]], device='cuda:0', grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -3241,12 +3225,12 @@
     "delta = torch.zeros_like(image, requires_grad=True).to(device)\n",
     "\n",
     "classIdx = 0\n",
-    "adversary = generate_adversaries(smallmodel, image, delta, classIdx, steps=20, epsilon=0.005)"
+    "adversary = generate_adversaries(smallmodel, image, delta, steps=20, epsilon=0.005)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3257,14 +3241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.8312]], device='cuda:0', grad_fn=<AddmmBackward0>)\n"
+      "tensor([[0.8100]], device='cuda:0', grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -3277,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3288,7 +3272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -3297,7 +3281,7 @@
        "3"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,7 +3292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3317,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3327,11 +3311,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
     "adversary_pil.save(\"change.JPEG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model025.num_exits_per_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_sample(image_path):\n",
+    "    image = Image.open(image_path)\n",
+    "    # print(image_path)\n",
+    "    image = transform(image).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # some images are not transformable normally?\n",
+    "    try:\n",
+    "        # save before img\n",
+    "        newimg = Image.open(image_path)\n",
+    "        newimg = transform(newimg)\n",
+    "        \n",
+    "    except TypeError:\n",
+    "        return None\n",
+    "\n",
+    "    # create perturbation\n",
+    "    image.requires_grad = True\n",
+    "    delta = torch.zeros_like(image, requires_grad=True).to(device)\n",
+    "\n",
+    "    adversary = generate_adversaries(smallmodel, image, delta, steps=20, epsilon=0.005)  \n",
+    "\n",
+    "    # create adv image\n",
+    "    adversary_image = (image + adversary).clamp(0, 1).squeeze().permute(1, 2, 0).cpu().detach().numpy()\n",
+    "    adversary_image = (adversary_image * 255).astype('uint8')\n",
+    "    adversary_image = Image.fromarray(adversary_image)\n",
+    "    \n",
+    "\n",
+    "    new = transform(adversary_image).unsqueeze(0).to(device)\n",
+    "    with torch.no_grad():\n",
+    "        output = model025(new)\n",
+    "        predclass = torch.argmax(output, dim=1).item()\n",
+    "        return predclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_sample_set(directory_path):\n",
+    "    classfolders = [fol for fol in os.listdir(directory_path) if os.path.isdir(os.path.join(directory_path, fol))]\n",
+    "    for classname in classfolders:\n",
+    "        print(classname)\n",
+    "        cnt = 0\n",
+    "        correct = 0\n",
+    "        sdpath = os.path.join(directory_path, classname)\n",
+    "        files = [os.path.join(sdpath, fil) for fil in os.listdir(sdpath)]\n",
+    "        for file in files:\n",
+    "            # filename = file.split(\"\\\\\")[-1]\n",
+    "            expected = update_class_indices[class_indices[classname]]\n",
+    "            eec = gen_sample(file)\n",
+    "            if expected == eec:\n",
+    "                correct += 1\n",
+    "            cnt += 1\n",
+    "        print(f\"Class: {classname} has got accuracy of {correct / cnt * 100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n01440764\n",
+      "Class: n01440764 has got accuracy of 34.0%\n",
+      "n02102040\n",
+      "Class: n02102040 has got accuracy of 26.0%\n",
+      "n02979186\n",
+      "Class: n02979186 has got accuracy of 20.0%\n",
+      "n03000684\n",
+      "tensor([[-104.6533, -105.0534, -105.3958,  -77.0286, -106.5709, -100.7227,\n",
+      "         -108.4825, -107.6332, -107.9240, -104.1230]], device='cuda:0')\n",
+      "Class: n03000684 has got accuracy of 55.00000000000001%\n",
+      "n03028079\n",
+      "Class: n03028079 has got accuracy of 40.0%\n",
+      "n03394916\n",
+      "Class: n03394916 has got accuracy of 75.0%\n",
+      "n03417042\n",
+      "Class: n03417042 has got accuracy of 25.0%\n",
+      "n03425413\n",
+      "Class: n03425413 has got accuracy of 57.99999999999999%\n",
+      "n03445777\n",
+      "Class: n03445777 has got accuracy of 19.0%\n",
+      "n03888257\n",
+      "Class: n03888257 has got accuracy of 5.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_sample_set(\"..\\\\torch_normal_adv_samples\\\\results_transfer\\\\inputs\")"
    ]
   }
  ],
