add target val to pushback attack

--- a/normal_adv_to_ee/main.ipynb
+++ b/normal_adv_to_ee/main.ipynb
@@ -6192,16 +6192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.1588]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+       "tensor([[-2.3252]], device='cuda:0', grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 676,
+     "execution_count": 688,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6455,7 +6455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6477,14 +6477,14 @@
     "    # image.requires_grad = True\n",
     "    delta = torch.zeros_like(image, requires_grad=True).to(device)\n",
     "\n",
-    "    adversary = generate_adversaries_down(smallmodel2, image, delta, steps=2, epsilon=0.01, mode=mode)\n",
+    "    adversary = generate_adversaries_down(smallmodel2, image, delta, steps=2, target=-10.0, epsilon=0.01, mode=mode)\n",
     "\n",
     "    # create adv image\n",
     "    image = (image + adversary)\n",
     "    # image.requires_grad = True\n",
     "    delta = torch.zeros_like(image, requires_grad=True).to(device)\n",
     "\n",
-    "    adversary = generate_adversaries_down(smallmodel3, image, delta, steps=2, epsilon=0.01, mode=mode)  \n",
+    "    adversary = generate_adversaries_down(smallmodel3, image, delta, steps=2, target=-10.0, epsilon=0.01, mode=mode)  \n",
     "\n",
     "    # create adv image\n",
     "    adversary_image = (image + adversary).clamp(0, 1).squeeze().permute(1, 2, 0).cpu().detach().numpy()\n",
@@ -6501,17 +6501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2671]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[-2.9448]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[0.3160]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
-      "tensor([[-2.1837]], device='cuda:0', grad_fn=<AddmmBackward0>)\n",
       "tensor([[ -61.3774,  -94.7439,  -92.0569, -101.3762,  -85.1474,  -95.4497,\n",
       "         -105.2471, -101.1099, -102.9531,  -97.7021]], device='cuda:0')\n"
      ]
@@ -6522,7 +6518,7 @@
        "(0, [0, 0, 0, 1])"
       ]
      },
-     "execution_count": 641,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6559,16 +6555,12 @@
     "                    continue\n",
     "                finally:\n",
     "                    cnt += 1\n",
-    "        print(f\"Class: {classname} found {correct / cnt * 100}% possible pushbacks\")\n",
-    "        #     if expected == eec:\n",
-    "        #         correct += 1\n",
-    "        #     cnt += 1\n",
-    "        # print(f\"Class: {classname} has got accuracy of {correct / cnt * 100}%\")"
+    "        print(f\"Class: {classname} found {correct / cnt * 100}% possible pushbacks\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
     {
@@ -6713,8 +6705,8 @@
       "tensor([[ -73.9154, -102.2983, -106.6287,  -99.7100, -105.7955, -106.5260,\n",
       "         -107.1542, -104.1008, -106.7542, -106.7550]], device='cuda:0')\n",
       "(0, [0, 0, 0, 1])\n",
-      "tensor([[-46.8553, -75.8984, -72.8772, -78.4584, -70.9073, -78.4225, -77.3135,\n",
-      "         -76.5157, -79.3422, -77.8005]], device='cuda:0')\n",
+      "tensor([[-46.8589, -75.9025, -72.8802, -78.4621, -70.9112, -78.4270, -77.3178,\n",
+      "         -76.5194, -79.3460, -77.8061]], device='cuda:0')\n",
       "(0, [0, 0, 0, 1])\n",
       "tensor([[ -69.7426,  -96.9806, -100.0489,  -96.0651,  -98.4921,  -99.1290,\n",
       "          -99.0509,  -96.1226,  -95.6815,  -93.7850]], device='cuda:0')\n",
